--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 <body class="dark-mode">
   <div class="app-container">
     <header>
-      <div class="logo">VideoAI</div>
+      <div class="logo">MeeetingAI</div>
       <div class="theme-toggle">
         <i class="fas fa-moon"></i>
       </div>
     </header>
-    
     <main>
       <div class="video-grid" id="videoGrid">
         <div class="video-container main-video">
@@ -26,7 +25,6 @@
           </div>
         </div>
       </div>
-
       <div class="controls-bar">
         <button class="control-btn" id="muteBtn">
           <i class="fas fa-microphone"></i>
